--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.3.0",
+    "nodemon": "^3.1.0",
+    "validator": "^13.11.0"
   }
 }
