--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "mocha --recursive --exit"
   },
   "author": "BinhB2106784",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "nodemon": "^3.1.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "mocha": "^10.4.0"
   }
 }
